# car_drift

./: .gitignore  Cargo.toml  eframe_template-b9a22a6948151618.js  eframe_template-b9a22a6948151618_bg.wasm  index.html  rust-toolchain
.github/workflows/: pages.yml
graphs/: draw.py  draw_interpolate.py  get_value.py  learn_ae.py
records/: learn_nn_actor.py  learn_nn_predictor.py
src/: app.rs  common.rs  evolution.rs  lib.rs  main.rs  math.rs  nn.data  nn.rs  physics.rs  storage.rs
